[build-system]
requires = ["setuptools ~= 67.5.0", "setuptools-scm[toml] ~= 7.1.0", "wheel ~= 0.38.4"]
build-backend = "setuptools.build_meta"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.design]
max-args = "7"
[tool.pylint.format]
max-line-length = "100"

[tool.setuptools_scm]
